syntax = "proto3";
option java_package = "com.jmp.grpc.proto";
option java_multiple_files = true;

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string message = 1;
}

service MessageService {
  rpc sendMessage(MessageRequest) returns (MessageResponse) {}
}
